fix overflow on sidebar

--- a/app/assets/stylesheets/shared/_sidebar.sass
+++ b/app/assets/stylesheets/shared/_sidebar.sass
@@ -7,7 +7,7 @@
   flex-direction: row
   @include media-breakpoint-up(md)
     flex-direction: column
-    min-height: 100%
+    min-height: calc(100vh - 56px)
 
   .sidebar-item
     font-size: 0.75rem
